--- a/grails-app/assets/stylesheets/theme/css/style.css
+++ b/grails-app/assets/stylesheets/theme/css/style.css
@@ -12,142 +12,264 @@
 	z-index:    -1000;
 }
 
-/* Text styling * /
-h1, h2, h3, h4, h5, h6, p, li { font-family: Arial; }
+/* The Simple Menu */
 
-/* The Simple Menu * /
 .simple ul{ 
-  /* background:#0d47a1;* /
+
+  /* background:#0d47a1;*/
+
   padding:0;
+
 }
+
+
 
 .simple li{ 
+
   display:inline-block; 
+
   min-width:100px; 
+
   z-index:999; 
+
 }
+
 .simple a{ 
+
   text-decoration:none; 
+
   display:inline-block; 
-  color:white; 
-  padding:15px;
+
+  color:#504e70; 
+
   transition:0.2s all linear;
+
 }
+
+
 
 .simple a:hover{
-  background:#e05c37;
-  color:#fff;
+
+  color:#e67605;
+
   transition:0.2s all linear;
+
   border-radius: 3px;
+
 }
 
 
-/* dropdown * /
+
+
+
+/* dropdown */
+
 .dropdown ul{ position:relative;  }
 
+
+
 .dropdown li > ul { 
-  background:#1565c0; 
+
+  background:#fff; 
+
   display:none;
+
   position:absolute;
+
   z-index:1999;
+
 }
+
+
 
 .dropdown li > ul li{ display:block; }
 
+
+
 .dropdown li:hover  > ul{
+
   display:block;
+
 }
 
-/* multi * /
+
+
+/* multi */
+
 .multi li {  position: relative; } 
+
 .multi ul ul ul { 
+
   background:green; 
+
   position:absolute;
+
   left:100%;
+
   top:0;
+
 }
 
-/* all three parts compiled into a single class * /
+
+
+/* all three parts compiled into a single class */
+
+
 
 .nav ul { 
+
    background:#0d47a1; 
+
    padding:0;
 
+
+
 }
 
+
+
 .nav li { 
+
   position: relative; 
+
   display:inline-block; 
+
 }
+
+
+
 
 
 .nav a{ 
+
   text-decoration:none; 
+
   display:block; 
+
   color:white; 
-  padding:15px;
+
   transition:0.2s all linear;
+
 }
+
+
 
 .nav a:hover{
+
   background:#e3f2fd;
+
   color:black;
+
   transition:0.2s all linear;
+
   border-radius: 3px;
+
 }
 
+
+
 .nav li > ul { 
+
   background:#1565c0; 
+
   display:none;
+
   position:absolute;
+
 }
+
+
 
 .nav li > ul li{ display:block; }
 
+
+
 .nav li:hover  > ul{
+
   display:block;
+
 }
+
+
 
 .nav ul ul ul { 
+
   background:green; 
+
   position:absolute;
+
   left:100%;
+
   top:0;
+
 }
+
+
 
 .desktoplogo { 
+
   padding: 1.5rem 0;
+
 }
+
+
 
 .mainmenu { 
+
   padding: 1.5rem 0;
+
 }
+
+
 
 .bg-nav { 
-  / * background-color: #0d47a1; * /
-  /* background: rgb(0,0,0,.3); * /
+
+  /* background-color: #0d47a1; */
+
+  /* background: rgb(0,0,0,.3); */
+
 }
+
+
 
 .socials i {
-    /* color: #ec296b !important; * /
+
+    /* color: #ec296b !important; */
+
 }
+
+
 
 .custom i {
-    /* color: #ec296b !important; * /
+
+    /* color: #ec296b !important; */
+
 }
+
+
 
 .fa {
-    /* color: #fff !important; * /
+
+    /* color: #fff !important; */
+
 }
+
+
 
 .active {
+
     background-color: rgba(255, 255, 255, 0.2);
+
     color: #fff;
+
     border-radius: 3px;
+
 }
+
+
 
 .float-right {
-    float: right;
-}
 
-*/
+    float: right;
+
+}
