placeholder image for group

--- a/grails-app/assets/stylesheets/theme/css/style.css
+++ b/grails-app/assets/stylesheets/theme/css/style.css
@@ -1,275 +1,149 @@
 /* Spring Security styling */
 .s2ui_hidden_button {
-	background: white;
-	border:     0;
-	float:      right;
-	height:     0;
-	left:       1px;
-	margin:     0;
-	padding:    0;
-	position:   absolute;
-	width:      0;
-	z-index:    -1000;
+  background: white;
+  border: 0;
+  float: right;
+  height: 0;
+  left: 1px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  width: 0;
+  z-index: -1000;
 }
 
 /* The Simple Menu */
 
-.simple ul{ 
-
+.simple ul {
   /* background:#0d47a1;*/
-
-  padding:0;
-
+  padding: 0;
 }
 
-
-
-.simple li{ 
-
-  display:inline-block; 
-
-  min-width:100px; 
-
-  z-index:999; 
-
+.simple li {
+  display: inline-block;
+  min-width: 100px;
+  z-index: 999;
 }
 
-.simple a{ 
-
-  text-decoration:none; 
-
-  display:inline-block; 
-
-  color:#504e70; 
-
-  transition:0.2s all linear;
-
+.simple a {
+  text-decoration: none;
+  display: inline-block;
+  color: #504e70;
+  transition: 0.2s all linear;
 }
 
-
-
-.simple a:hover{
-
-  color:#e67605;
-
-  transition:0.2s all linear;
-
+.simple a:hover {
+  color: #e67605;
+  transition: 0.2s all linear;
   border-radius: 3px;
-
 }
-
-
-
-
 
 /* dropdown */
 
-.dropdown ul{ position:relative;  }
-
-
-
-.dropdown li > ul { 
-
-  background:#fff; 
-
-  display:none;
-
-  position:absolute;
-
-  z-index:1999;
-
+.dropdown ul {
+  position: relative;
 }
 
-
-
-.dropdown li > ul li{ display:block; }
-
-
-
-.dropdown li:hover  > ul{
-
-  display:block;
-
+.dropdown li > ul {
+  background: #fff;
+  display: none;
+  position: absolute;
+  z-index: 1999;
 }
 
+.dropdown li > ul li {
+  display: block;
+}
 
+.dropdown li:hover > ul {
+  display: block;
+}
 
 /* multi */
 
-.multi li {  position: relative; } 
-
-.multi ul ul ul { 
-
-  background:green; 
-
-  position:absolute;
-
-  left:100%;
-
-  top:0;
-
+.multi li {
+  position: relative;
 }
 
-
+.multi ul ul ul {
+  background: green;
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
 
 /* all three parts compiled into a single class */
 
-
-
-.nav ul { 
-
-   background:#0d47a1; 
-
-   padding:0;
-
-
-
+.nav ul {
+  background: #0d47a1;
+  padding: 0;
 }
 
-
-
-.nav li { 
-
-  position: relative; 
-
-  display:inline-block; 
-
+.nav li {
+  position: relative;
+  display: inline-block;
 }
 
+.nav a {
+  text-decoration: none;
+  display: block;
 
+  color: white;
 
-
-
-.nav a{ 
-
-  text-decoration:none; 
-
-  display:block; 
-
-  color:white; 
-
-  transition:0.2s all linear;
-
+  transition: 0.2s all linear;
 }
 
-
-
-.nav a:hover{
-
-  background:#e3f2fd;
-
-  color:black;
-
-  transition:0.2s all linear;
-
+.nav a:hover {
+  background: #e3f2fd;
+  color: black;
+  transition: 0.2s all linear;
   border-radius: 3px;
-
 }
 
-
-
-.nav li > ul { 
-
-  background:#1565c0; 
-
-  display:none;
-
-  position:absolute;
-
+.nav li > ul {
+  background: #1565c0;
+  display: none;
+  position: absolute;
 }
 
-
-
-.nav li > ul li{ display:block; }
-
-
-
-.nav li:hover  > ul{
-
-  display:block;
-
+.nav li > ul li {
+  display: block;
 }
 
-
-
-.nav ul ul ul { 
-
-  background:green; 
-
-  position:absolute;
-
-  left:100%;
-
-  top:0;
-
+.nav li:hover > ul {
+  display: block;
 }
 
+.nav ul ul ul {
+  background: green;
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
 
-
-.desktoplogo { 
-
+.desktoplogo {
   padding: 1.5rem 0;
-
 }
 
-
-
-.mainmenu { 
-
+.mainmenu {
   padding: 1.5rem 0;
-
 }
-
-
-
-.bg-nav { 
-
-  /* background-color: #0d47a1; */
-
-  /* background: rgb(0,0,0,.3); */
-
-}
-
-
-
-.socials i {
-
-    /* color: #ec296b !important; */
-
-}
-
-
-
-.custom i {
-
-    /* color: #ec296b !important; */
-
-}
-
-
-
-.fa {
-
-    /* color: #fff !important; */
-
-}
-
-
 
 .active {
-
-    background-color: rgba(255, 255, 255, 0.2);
-
-    color: #fff;
-
-    border-radius: 3px;
-
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  border-radius: 3px;
 }
 
-
-
 .float-right {
+  float: right;
+}
 
-    float: right;
-
+.group-pattern-1 {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url(/assets/theme/img/groups/group-1.jpg) center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
