--- a/grails-app/assets/stylesheets/claylist/css/dashboard.css
+++ b/grails-app/assets/stylesheets/claylist/css/dashboard.css
@@ -9918,6 +9918,15 @@ body {
   height: 100%;
   overflow-y: scroll;
   position: relative;
+
+  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #605e7e;
+  text-align: left;
+  background-color: #f1eef7;
+  font-family: Muli, sans-serif;
 }
 
 .page {
@@ -12453,6 +12462,10 @@ hr.divider:after {
 .card-footer {
   border-top: 1px solid #e8ebf3;
   color: #5f6877;
+}
+
+.card-footer {
+  background-color: rgba(0, 0, 0, 0.03);
 }
 
 .card-header {
