--- a/grails-app/assets/stylesheets/theme/css/style.css
+++ b/grails-app/assets/stylesheets/theme/css/style.css
@@ -230,3 +230,72 @@ label .location-gps {
   overflow: hidden;
 }
 /* v-modal css end */
+
+/* vue select css */
+.v-select {
+  display: block;
+  height: 40px;
+  padding-left: 8px;
+  padding-right: 20px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  text-align: left;
+  border: 1px solid #e8ebf3 !important;
+  border-radius: 4px;
+  background-color: #fff;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.vs__dropdown-toggle {
+  border: none !important;
+}
+
+.vs__selected {
+  padding-top: 0.25em !important;
+}
+
+.select2-selection__deselect,
+.select2-selection__arrow {
+  height: 26px;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  width: 20px;
+
+  height: 100% !important;
+}
+
+.select2-selection__arrow b {
+  border-color: #605e7e transparent transparent transparent;
+  border-style: solid;
+  border-width: 5px 4px 0 4px;
+}
+
+.select2-selection__arrow b {
+  height: 0;
+  left: 50%;
+  margin-left: -12px;
+  margin-top: -2px;
+  position: absolute;
+  top: 50%;
+  width: 0;
+}
+
+.vs__clear {
+  position: absolute;
+  margin-left: -12px;
+  margin-top: -18px;
+}
+
+.vs--open .select2-selection__arrow b {
+  border-color: transparent transparent #605e7e transparent;
+  border-width: 0 4px 5px 4px;
+}
+
+.vs--open,
+.vs__open-indicator,
+.vs__open-indicator {
+  transition: none !important;
+  transform: none !important;
+}
