supplier api + order create + no-print css

--- a/grails-app/assets/stylesheets/theme/css/gb-style.css
+++ b/grails-app/assets/stylesheets/theme/css/gb-style.css
@@ -140,6 +140,13 @@
 }
 
 /* media queries */
+@media print {
+  .no-print,
+  .no-print * {
+    display: none !important;
+  }
+}
+
 @media (min-width: 1440px) {
   .container {
     max-width: 1380px;
