--- a/grails-app/assets/stylesheets/theme/css/gb-style.css
+++ b/grails-app/assets/stylesheets/theme/css/gb-style.css
@@ -513,3 +513,136 @@ label .location-gps.fa-spinner {
 }
 
 /* end forms */
+
+/* RA */
+
+body {
+  background-color: #d3e7ee;
+} 
+
+.horizontal-header .smllogo {
+    display: inline-block;
+    margin-top: 11px;
+    margin-bottom: 50px;
+}
+
+.horizontal-main {
+  background: #fff;
+}
+
+.slide-uno {
+  background: url(/assets/theme/img/other/slide1.jpg);
+  width: 100%;
+  height: 100%;
+  margin-top: 100px;
+ }
+
+ .bg-background .header-text1 {
+  position: relative;
+  z-index: 10;
+  padding: 10em 0em 10em 0em;
+}
+
+.section-title {
+    padding-bottom: 2rem;
+    color: #d63e30;
+}
+
+.card-item .fa-lg {
+    font-size: 5em;
+    vertical-align: -15%;
+    color: #fc5e2e;
+}
+
+.widgets-cards .wrp.icon-circle i {
+    font-size: 3rem;
+    color: #fff;
+}
+
+.icon-service {
+    display: inline-flex;
+    width: 120px;
+    height: 120px;
+    text-align: center;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff !important;
+}
+
+.icon-service .fa {
+    color: #fc5e2e;
+}
+
+.feature .fea-icon {
+    position: relative;
+    display: inline-block;
+    width: 5rem;
+    height: 5rem;
+    vertical-align: middle;
+    padding-top: 8px;
+    border-radius: 50%;
+    color: #fff;
+}
+
+.feature .fea-icon i {
+    font-size: 3rem;
+}
+
+.fa-stack {
+    position: relative;
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    line-height: 3.5em;
+    vertical-align: middle;
+}
+
+@media (max-width:1280px) {
+  .bg-background .header-text1 {
+    position: relative;
+    z-index: 10;
+    padding: 0em 0em 8em 3em;
+  }
+}
+
+@media (max-width:1024px) {
+  .bg-background .header-text1 {
+    position: relative;
+    z-index: 10;
+    padding: 0em 0em 8em 3em;
+  }
+}
+
+@media (max-width:769px) {
+  .bg-background .header-text1 {
+    position: relative;
+    z-index: 10;
+    padding: 0em 0em 4em 0em;
+  }
+}
+
+@media (max-width:540px) {
+  .reviews-categories .widget-spec1 li {
+    margin-bottom: .5rem;
+    font-size: .9rem;
+    display: flow-root;
+  }
+
+  .reviews-categories .widget-spec1 li span {
+    margin: 0;
+  }
+
+  .slide-uno {
+    background: url(/assets/theme/img/other/slide1-mobile.jpg);
+    width: 100%;
+    height: 100%;
+    margin-top: 0px;
+  }
+
+  .bg-background .header-text1 {
+      position: relative;
+      z-index: 10;
+      padding: 3em 0em 18em 0em;
+  }
+}
