--- a/grails-app/assets/stylesheets/claylist/css/buttons.css
+++ b/grails-app/assets/stylesheets/claylist/css/buttons.css
@@ -1048,8 +1048,8 @@ input[type=submit].btn-block {
 }
 .btn-blue {
 	color: #fff;
-	background-color: #467fcf;
-	border-color: #467fcf
+	background-color: #38aae1;
+	border-color: #38aae1
 }
 .btn-blue:hover {
 	color: #fff;
